re PR c++/71946 (asm in toplevel lambda function rejected)

/cp
2017-10-04  Paolo Carlini  <paolo.carlini@oracle.com>
	    Andrew Pinski  <apinski@cavium.com>

	PR c++/71946
	* parser.c (cp_parser_lambda_body): Set parser->in_function_body.

/testsuite
2017-10-04  Paolo Carlini  <paolo.carlini@oracle.com>
	    Andrew Pinski  <apinski@cavium.com>

	PR c++/71946
	* g++.dg/cpp0x/lambda/lambda-asm1.C: New.
	* g++.dg/cpp0x/lambda/lambda-stmtexpr1.C: Likewise.

Co-Authored-By: Andrew Pinski <apinski@cavium.com>

From-SVN: r253423